<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_iconbig_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_email"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_password"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <CheckBox
            android:id="@+id/mostrarsenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showpassword"
            android:textColor="@android:color/white"
            android:buttonTint="@color/abc_search_url_text"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:onClick="Systemlogin"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgetpassword"
            android:onClick="forgetmypassword"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/textView_signIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signin"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="20dp"
            android:onClick="register"
            android:textColorLink="@android:color/white"/>

    </LinearLayout>



</LinearLayout>
