<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_revert"
            android:layout_gravity="center"
            android:onClick="backtologinactivity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginLeft="80dp"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_nomeregister"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/name"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_emailregister"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_passwordregister"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPassword"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edittext_passwordtworegister"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/passwordagain"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPassword"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signinregister"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:onClick="registeruser"/>


    </LinearLayout>



</LinearLayout>
