<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Send a review"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginLeft="100dp"/>



        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_delete"
            android:onClick="backmain"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profilepicture"
            android:onClick="takepicture"
            android:id="@+id/profile_photo"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:id="@+id/sendmarca"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:id="@+id/sendmodelo"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classificação"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

        <RatingBar
            android:id="@+id/ratingsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="center"
            android:numStars="5" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:hint="@string/Avaliação"
            android:layout_marginLeft="5dp"
            android:paddingLeft="10dp"
            android:background="@drawable/borderblack"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:id="@+id/sendaval"/>



    </LinearLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/send"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:onClick="buttonpost"/>



</LinearLayout>
