<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seereview"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginLeft="100dp"/>



        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_delete"
            android:onClick="seetobackmain"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profilepicture"
            android:id="@+id/profile_photosee"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@android:color/white"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/black"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/profilemarcasee"
                android:layout_marginLeft="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/marca"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="end"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@android:color/white"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/black"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/profilemodelosee"
                android:layout_marginLeft="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/modelo"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="end"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"/>


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classificação"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="@android:color/white"/>

        <RatingBar
            android:id="@+id/ratingsee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="center"
            android:numStars="5"
            android:clickable="false" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:background="@android:color/white"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/black"
            android:layout_gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/profileavalsee"
                android:layout_marginLeft="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/Avaliação"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
